Finalize orden-service con tests cobertura HATEOAS y Dockerfile